--- a/index.html
+++ b/index.html
@@ -3,19 +3,20 @@
 <head>
 	<meta charset="utf-8">
 	<title> Sedona hotel </title>
-	<link href="https://fonts.google.com/specimen/PT+Sans?query=pt+sa:400, 700&amp;subset=latin,cyrilic" rel="stylesheet">
-	<link href="css/normalize.css" rel="stylesheet">
-	<link href="css/style.css" rel="stylesheet">
+	<!-- <link href="https://fonts.google.com/specimen/PT+Sans?query=pt+sa:400, 700&amp;subset=latin,cyrilic" rel="stylesheet"> -->
+	<link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
 	<header>
-		<nav class="main-navigation">
+		<nav class="nav">
 			<a>
 				<img src="img/logo.png" width="140" height="72"
 				alt = "Logo Sedona">
 			</a>
-			<ul class="site-navigation">
+			<ul class="nav_link">
 				<li><a href="info.html">Информация</a></li>
 				<li><a href="photovideo.html">Фото и видео</a></li>
 				<li><a href="map.html">Карта штата</a></li>
