--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 				Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!
 			</p>
 			<ul class="feature-list">
-				<li class="feature-item-light">
+				<li class="feature-item-white">
 					<h3> Настоящий городок </h3>
 					<p>
 						- №1 - <br>
@@ -63,7 +63,7 @@
  				<img class="feature-photo" src="img/reason1.jpg" width="800" height="401"
 				alt = "First reason Sedona">
 				</li>
-				<li class="feature-item-light">
+				<li class="feature-item-white">
 					<h3> Там есть <br>
 					мост дьявола </h3>
 					<p>
@@ -76,7 +76,7 @@
 					<img src="img/reason2.jpg" width="800" height="401"
 				alt = "Second reason Sedona">
 				</li>
-				<li class="feature-item-dark">
+				<li class="feature-item-black">
 					<h3> Небольшая <br>
 					площадь </h3>
 					<p>
@@ -87,7 +87,7 @@
 						находятся очень близко
 					</p>
 				</li>
-				<li class="feature-item-dark">
+				<li class="feature-item-black">
 					<h3> Красивая <br>
 					дорога </h3>
 					<p>
@@ -98,7 +98,7 @@
 						нескучно!
 					</p>
 				</li>
-				<li class="feature-item-dark">
+				<li class="feature-item-black">
 					<h3> Мало <br>
 					туристов </h3>
 					<p>
