--- a/index.html
+++ b/index.html
@@ -50,8 +50,13 @@
 			<p>
 				Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!
 			</p>
+		</section>
 			<ul class="feature-list">
-				<li class="feature-item-white">
+			<figure class="feature-photo1">	
+ 					<img  src="img/reason1.jpg" width="800" height="255"
+					alt = "First reason Sedona">
+				</figure> 
+				<li class="feature-item-white1">					
 					<h3> Настоящий городок </h3>
 					<p>
 						- №1 - <br>
@@ -60,10 +65,50 @@
 						Седона - не аттракцион для туристов, <br>
 						там течет своя жизнь
 					</p>
- 				<img class="feature-photo" src="img/reason1.jpg" width="800" height="401"
-				alt = "First reason Sedona">
 				</li>
-				<li class="feature-item-white">
+
+		<div>
+			<ul class="features-img">
+				<figure>
+						<img src="img/accommodation.png" width="75" height="72"
+				alt = "Accommodation">
+					</figure>
+				<li>
+					<h3> Жильё </h3>
+					<p>
+						Рекомендуем пожить в настоящем <br>
+						мотеле, всё как в кино!
+					</p>
+				</li>
+				<figure>
+						<img src="img/food.png" width="74" height="70"
+				alt = "Food">
+					</figure>
+				<li>
+					<h3> Еда </h3>
+					<p>
+						Всегда заказывайте фирменный бургер, <br>
+						вы не разочаруетесь!
+					</p>
+				</li>
+				<figure>
+						<img src="img/souvenir.png" width="64" height="76"
+				alt = "Souvenir">
+					</figure>
+					<li>
+					<h3> Сувениры </h3>
+					<p>
+						Не только китайского, но и местного <br>
+						производства!
+					</p>
+				</li>
+			</ul>
+		</div>		
+				<figure class="feature-photo2">
+					<img src="img/reason2.jpg" width="800" height="255"
+				alt = "Second reason Sedona">
+				</figure>
+				<li class="feature-item-white2">				
 					<h3> Там есть <br>
 					мост дьявола </h3>
 					<p>
@@ -73,9 +118,7 @@
 						Да, по нему можно пройти! Если конечно <br>
 						вы осмелитесь
 					</p>
-					<img src="img/reason2.jpg" width="800" height="401"
-				alt = "Second reason Sedona">
-				</li>
+				</li> 
 				<li class="feature-item-black">
 					<h3> Небольшая <br>
 					площадь </h3>
@@ -111,44 +154,6 @@
 				</li>
 			</ul>
 		</section>
-
-		<div>
-			<ul class="features-img">
-				<li>
-					<figure>
-						<img src="img/accommodation.png" width="75" height="72"
-				alt = "Accommodation">
-					</figure>
-					<h3> Жильё </h3>
-					<p>
-						Рекомендуем пожить в настоящем <br>
-						мотеле, всё как в кино!
-					</p>
-				</li>
-				<li>
-					<figure>
-						<img src="img/food.png" width="74" height="70"
-				alt = "Food">
-					</figure>
-					<h3> Еда </h3>
-					<p>
-						Всегда заказывайте фирменный бургер, <br>
-						вы не разочаруетесь!
-					</p>
-				</li>
-					<li>
-					<figure>
-						<img src="img/souvenir.png" width="64" height="76"
-				alt = "Souvenir">
-					</figure>
-					<h3> Сувениры </h3>
-					<p>
-						Не только китайского, но и местного <br>
-						производства!
-					</p>
-				</li>
-			</ul>
-		</div>
 
 		<section>
 			<h2> Заинтересовались? </h2>
