--- a/index.html
+++ b/index.html
@@ -39,15 +39,15 @@
 				<img src="img/polygon.png" width="1202" height="59"
 				alt = "About Sedona">
 			</figure>
-			<p>
+			<p class="slogan">
 				Седона - небольшой городок в Аризоне,<br>
 				 заслуживающий большего!
 			</p>
 		</section>
 
 		<section>
-			<h2>Причины</h2>
-			<p>
+			<h2 class="visually-hidden"> Причины</h2>
+			<p class="features">
 				Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!
 			</p>
 		</section>
@@ -69,33 +69,33 @@
 
 		<div>
 			<ul class="features-img">
-				<figure>
+				<li>
+					<figure>
 						<img src="img/accommodation.png" width="75" height="72"
 				alt = "Accommodation">
 					</figure>
-				<li>
 					<h3> Жильё </h3>
 					<p>
 						Рекомендуем пожить в настоящем <br>
 						мотеле, всё как в кино!
 					</p>
 				</li>
-				<figure>
+				<li>
+					<figure>
 						<img src="img/food.png" width="74" height="70"
 				alt = "Food">
 					</figure>
-				<li>
 					<h3> Еда </h3>
 					<p>
 						Всегда заказывайте фирменный бургер, <br>
 						вы не разочаруетесь!
 					</p>
 				</li>
-				<figure>
+					<li>
+						<figure>
 						<img src="img/souvenir.png" width="64" height="76"
 				alt = "Souvenir">
 					</figure>
-					<li>
 					<h3> Сувениры </h3>
 					<p>
 						Не только китайского, но и местного <br>
@@ -155,69 +155,66 @@
 			</ul>
 		</section>
 
-		<section>
+		<section class="text-all">
 			<h2> Заинтересовались? </h2>
-			
+				<p class="text">
+					Укажите предполагаемые даты поездки, <br>
+					и мы покажем вам лучшие предложения гостиниц в Седоне
+				</p>
+			<form class="search" action="https:/echo.htmlacademy.ru" method ="post">
+				<h3> Поиск гостиницы в Седоне </h3>
 					<p>
-						Укажите предполагаемые даты поездки, <br>
-						и мы покажем вам лучшие предложения гостиниц в Седоне
+						<label for="arrival-date">Дата заезда:</label>
+						<input id="arrival-date" type="date" name="date" value="24 апреля 2017">
 					</p>
 					<p>
-						Поиск гостиницы в Седоне
+						<label for="depart-date">Дата выезда:</label>
+						<input id="depart-date" type="date" name="date" value="25 апреля 2017">
 					</p>
-					<form action="https:/echo.htmlacademy.ru" method ="post">
-						<p>
-							<label for="arrival-date">Дата заезда</label>
-							<input id="arrival-date" type="date" name="date" value="24 апреля 2017">
-						</p>
-						<p>
-							<label for="depart-date">Дата выезда</label>
-							<input id="depart-date" type="date" name="date" value="25 апреля 2017">
-						</p>
-						<p>
-							<label for="adults">Взрослые</label>
-							<input id="adults" type="number" name="num" value="2">
-						</p>
-						<p>
-							<label for="children">Дети</label>
-							<input id="children" type="number" name="num" value="0">
-						</p>
-						<button type="submit">Найти</button>
-					</form>
-					<figure>
-						<img src="img/map.png" width="1718" height="748"
+					<p>
+						<label for="adults">Взрослые:</label>
+						<input id="adults" type="number" name="num" value="2">
+					</p>
+					<p>
+						<label for="children">Дети:</label>
+						<input id="children" type="number" name="num" value="0">
+					</p>
+				<button class="button" type="submit">Найти</button>
+			</form>
+			<figure>
+				<img src="img/map.png" width="1718" height="748"
 				alt = "Map">
-					</figure>
+			</figure>
 		</section>
 	</main>
 
 	<footer>
-		<p>
+		<p class="contacts">
 			<a href="#">#VISITSEDONA</a>
 			ТЕЛ: +7 (495) 666-02-66
 		</p>
 		<div>
-			<ul>
+			<ul class="list-social">
 				<li> 
-					<a href="#"Twitter>
+					<a class="social" href="#"Twitter>
 					 <img src="img/twitter.png" width="17" height="15"
 				alt = "Twitter">
 			</a>
 		</li>
 				<li>
-				 <a href="#"Facebook>
+				 <a class="social" href="#"Facebook>
 				  <img src="img/facebook.png" width="12" height="22"
 				  alt = "Facebook">
 				</a>
 			</li>
-				<li> <a href="#"Youtube>
+				<li> <a class="social" href="#"Youtube>
 				  <img src="img/youtube.png" width="20" height="16"
 				  alt = "Youtube">
 				</a>
 			</li>
 			</ul>
 		</div>
-		<p>
+		<p class="academy">
 			website by <a href="#"HTML Academy>
 				<img src="img/academy.png" width="115" height="41"
 				alt = "HTML Academy">
