--- a/index.html
+++ b/index.html
@@ -11,14 +11,13 @@
 
 <body>
 	<header>
-		<nav class="nav">
-			<a>
-				<img src="img/logo.png" width="140" height="72"
-				alt = "Logo Sedona">
-			</a>
+		<nav class="nav">	
 			<ul class="nav_link">
 				<li><a href="info.html">Информация</a></li>
 				<li><a href="photovideo.html">Фото и видео</a></li>
+		    <a> <img src="img/logo.png" width="140" height="72"
+				alt = "Logo Sedona">
+			</a> 
 				<li><a href="map.html">Карта штата</a></li>
 				<li><a href="hotels.html">Гостиницы</a></li>
 			</ul>
@@ -27,18 +26,20 @@
 
 	<main>
 
-		<h1> Hotel Sedona </h1>
+		<h1 class="visually-hidden"> Hotel Sedona </h1>
 
-		<section>
-			<h2> About Sedona </h2>
+		<section class="logo">
+			<h2 class="visually-hidden"> About Sedona </h2>
 			<figure>
 			<img src="img/welcome.png" width="459" height="353"
 				alt = "About Sedona">
-			<img src="img/background.jpg" width="1200" height="800"
-				alt = "About Sedona">	
+			<!--<img src="img/background.jpg" width="1200" height="800"
+				alt = "About Sedona">	-->
 				<img src="img/polygon.png" width="1202" height="59"
 				alt = "About Sedona">
 			</figure>
+		</section>
+		<section>
 			<p class="slogan">
 				Седона - небольшой городок в Аризоне,<br>
 				 заслуживающий большего!
