--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 </head>
 
 <body>
+	<div class="background">
 	<header>
 		<nav class="nav">	
 			<ul class="nav_link">
-				<li><a href="info.html">Информация</a></li>
+				<li ><a href="info.html">Информация</a></li>
 				<li><a href="photovideo.html">Фото и видео</a></li>
 		    <a> <img src="img/logo.png" width="140" height="72"
 				alt = "Logo Sedona">
@@ -25,12 +26,10 @@
 	</header>
 
 	<main>
-
+		<section>
 		<h1 class="visually-hidden"> Hotel Sedona </h1>
-
-		<section class="logo">
 			<h2 class="visually-hidden"> About Sedona </h2>
-			<figure>
+			<figure class="logo">
 			<img src="img/welcome.png" width="459" height="353"
 				alt = "About Sedona">
 			<!--<img src="img/background.jpg" width="1200" height="800"
@@ -38,25 +37,19 @@
 				<img src="img/polygon.png" width="1202" height="59"
 				alt = "About Sedona">
 			</figure>
-		</section>
-		<section>
+		<div class="background_reasons">
 			<p class="slogan">
 				Седона - небольшой городок в Аризоне,<br>
 				 заслуживающий большего!
 			</p>
-		</section>
-
-		<section>
 			<h2 class="visually-hidden"> Причины</h2>
 			<p class="features">
 				Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!
 			</p>
-		</section>
-			<ul class="feature-list">
-			<figure class="feature-photo1">	
- 					<img  src="img/reason1.jpg" width="800" height="255"
-					alt = "First reason Sedona">
-				</figure> 
+		</div>
+		</div>
+		<div class="first_reason">
+			<ul class="feature-list"> 
 				<li class="feature-item-white1">					
 					<h3> Настоящий городок </h3>
 					<p>
@@ -67,7 +60,11 @@
 						там течет своя жизнь
 					</p>
 				</li>
-
+					<figure class="feature-photo1">	
+ 					<img  src="img/reason1.jpg" width="800" height="255"
+					alt = "First reason Sedona">
+				</figure>
+		</div>
 		<div>
 			<ul class="features-img">
 				<li>
@@ -155,7 +152,7 @@
 				</li>
 			</ul>
 		</section>
-
+		</section>
 		<section class="text-all">
 			<h2> Заинтересовались? </h2>
 				<p class="text">
