--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-	<div class="background">
+	 <!--<div class="background"> -->
 	<header>
 		<nav class="nav">	
 			<ul class="nav_link">
@@ -26,17 +26,10 @@
 	</header>
 
 	<main>
-		<section>
+		<section class="background">
 		<h1 class="visually-hidden"> Hotel Sedona </h1>
 			<h2 class="visually-hidden"> About Sedona </h2>
-			<figure class="logo">
-			<img src="img/welcome.png" width="459" height="353"
-				alt = "About Sedona">
-			<!--<img src="img/background.jpg" width="1200" height="800"
-				alt = "About Sedona">	-->
-				<img src="img/polygon.png" width="1202" height="59"
-				alt = "About Sedona">
-			</figure>
+		</section>
 		<div class="background_reasons">
 			<p class="slogan">
 				Седона - небольшой городок в Аризоне,<br>
@@ -62,7 +55,7 @@
 					</p>
 				</li>
 						
- 					<img  src="img/reason1.jpg" width="800" height="255"
+ 					<img class="feature-photo1" src="img/reason1.jpg" width="800" height="255"
 					alt = "First reason Sedona">
 		</div>
 		<div>
@@ -101,11 +94,10 @@
 					</p>
 				</li>
 			</ul>
-		</div>		
-				<figure class="feature-photo2">
-					<img src="img/reason2.jpg" width="800" height="255"
+		</div>	
+			<div class="second_reason">
+				<img class="feature-photo2" src="img/reason2.jpg" width="800" height="255"
 				alt = "Second reason Sedona">
-				</figure>
 				<li class="feature-item-white2">				
 					<h3> Там есть <br>
 					мост дьявола </h3>
@@ -117,6 +109,8 @@
 						вы осмелитесь
 					</p>
 				</li> 
+			</div>
+			<div class="reason_black">	
 				<li class="feature-item-black">
 					<h3> Небольшая <br>
 					площадь </h3>
@@ -150,9 +144,8 @@
 						и толпится там
 					</p>
 				</li>
+				</div>
 			</ul>
-		</section>
-		</section>
 		<section class="text-all">
 			<h2> Заинтересовались? </h2>
 				<p class="text">
