--- a/index.html
+++ b/index.html
@@ -152,8 +152,13 @@
 					Укажите предполагаемые даты поездки, <br>
 					и мы покажем вам лучшие предложения гостиниц в Седоне
 				</p>
-			<form class="search" action="https:/echo.htmlacademy.ru" method ="post">
-				<h3> Поиск гостиницы в Седоне </h3>
+		</section>
+		<div class="search">
+			<button > Поиск гостиницы в Седоне</button>
+		</div>	
+			<form class="form-search" action="https:/echo.htmlacademy.ru" method ="post">
+
+				
 					<p>
 						<label for="arrival-date">Дата заезда:</label>
 						<input id="arrival-date" type="date" name="date" value="24 апреля 2017">
@@ -173,10 +178,10 @@
 				<button class="button" type="submit">Найти</button>
 			</form>
 			<figure>
-				<img src="img/map.png" width="1718" height="748"
+				<img src="img/map.png" width=100% height=100%
 				alt = "Map">
 			</figure>
-		</section>
+		
 	</main>
 
 	<footer>
