--- a/index.html
+++ b/index.html
@@ -177,10 +177,11 @@
 					</p>
 				<button class="button" type="submit">Найти</button>
 			</form>
+			
 			<figure>
 				<img src="img/map.png" width=100% height=100%
 				alt = "Map">
-			</figure>
+			</figure> 
 		
 	</main>
 
@@ -189,27 +190,27 @@
 			<a href="#">#VISITSEDONA</a>
 			ТЕЛ: +7 (495) 666-02-66
 		</p>
-		<div>
+		
 			<ul class="list-social">
 				<li> 
-					<a class="social" href="#"Twitter>
+					<a  href="#"Twitter>
 					 <img src="img/twitter.png" width="17" height="15"
 				alt = "Twitter">
 			</a>
 		</li>
 				<li>
-				 <a class="social" href="#"Facebook>
+				 <a  href="#"Facebook>
 				  <img src="img/facebook.png" width="12" height="22"
 				  alt = "Facebook">
 				</a>
 			</li>
-				<li> <a class="social" href="#"Youtube>
+				<li> <a  href="#"Youtube>
 				  <img src="img/youtube.png" width="20" height="16"
 				  alt = "Youtube">
 				</a>
 			</li>
 			</ul>
-		</div>
+		
 		<p class="academy">
 			website by <a href="#"HTML Academy>
 				<img src="img/academy.png" width="115" height="41"
