--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		<section class="background">
 		<h1 class="visually-hidden"> Hotel Sedona </h1>
 			<h2 class="visually-hidden"> About Sedona </h2>
-		</section>
+		</section> 
 		<div class="background_reasons">
 			<p class="slogan">
 				Седона - небольшой городок в Аризоне,<br>
@@ -194,29 +194,29 @@
 			<ul class="list-social">
 				<li> 
 					<a  href="#"Twitter>
-					 <img src="img/twitter.png" width="17" height="15"
+					 <img class="twitter" src="img/twitter.png" width="17" height="15"
 				alt = "Twitter">
 			</a>
 		</li>
 				<li>
 				 <a  href="#"Facebook>
-				  <img src="img/facebook.png" width="12" height="22"
+				  <img class="facebook" src="img/facebook.png" width="12" height="22"
 				  alt = "Facebook">
 				</a>
 			</li>
 				<li> <a  href="#"Youtube>
-				  <img src="img/youtube.png" width="20" height="16"
+				  <img class="youtube" src="img/youtube.png" width="20" height="16"
 				  alt = "Youtube">
 				</a>
 			</li>
 			</ul>
-		
-		<p class="academy">
-			website by <a href="#"HTML Academy>
+		<div class="academy">
+		<p> website by </p>
+		 <a href="#"HTML Academy> 
 				<img src="img/academy.png" width="115" height="41"
 				alt = "HTML Academy">
-			</a>
-		</p>
+		</a>
+		</div>
 	</footer>
 
 </body>
