--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 		    	</li>
 				<li><a href="#">Карта штата</a></li>
 				<li><a href="hotels.html">Гостиницы</a></li>
+			
 			</ul>
 		</nav>
 	</header>
@@ -169,7 +170,7 @@
 		<div class="search">
 			<button > Поиск гостиницы в Седоне</button>
 		</div>
-		<div>	
+		<div class="map-background">	
 			<section class="map">
 				<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d62289.03343487469!2d-111.78179795434333!3d34.8646676167134!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2sru!4v1595592243652!5m2!1sru!2sru" width="1200" height="593" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 			</section>	
