--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 			</div>
 		</section>
 		<div class="search">
-			<button > Поиск гостиницы в Седоне</button>
+			<button class="search-form"> Поиск гостиницы в Седоне</button>
 		</div>
 		<div class="map-background">	
 			<section class="map">
@@ -253,5 +253,6 @@
 				
 			</form>
 			</section>
+	<script src="js/form.js"></script>		
 </body>
 </html>
