--- a/index.html
+++ b/index.html
@@ -197,11 +197,11 @@
 					<div class="adults">
 						<label for="adults">Взрослые:</label>
 							<div class="numbers">
-							<button class="minus" type="button">
+							<button class="minus1" type="button">
 									<img src="img/minus.png" width="12" height="3" alt="меньше">
 							</button>
 							<input id="adults" type="number" name="num1" value="2">
-							<button class="plus" type="button">
+							<button class="plus1" type="button">
 									<img src="img/plus.png" width="11" height="11" alt="больше">
 							</button>
 							</div>
@@ -209,11 +209,11 @@
 					<div class="children">
 						<label for="children">Дети:</label>
 							<div class="numbers2">
-							<button class="minus" type="button">
+							<button class="minus2" type="button">
 									<img src="img/minus.png" width="12" height="3" alt="меньше">
 							</button>
 							<input id="children" type="number" name="num2" value="0">
-							<button class="plus" type="button">
+							<button class="plus2" type="button">
 									<img src="img/plus.png" width="11" height="11" alt="больше">
 							</button>
 							</div>
