--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 <body>
 	<header>
 		<nav class="nav">	
-			<ul class="nav_link">
+			<ul class="nav_list">
 				<li><a href="#">Информация</a></li>
 				<li><a href="#">Фото и видео</a></li>
 		    	<li class="img_logo"> <img src="img/logo.png" width="140" height="72" alt = "Logo Sedona"></li>
 				<li><a href="#">Карта штата</a></li>
-				<li><a href="hotels.html">Гостиницы</a></li>			
+				<li><a href="hotels.html">Гостиницы</a></li>
 			</ul>
 		</nav>
 	</header>
@@ -26,135 +26,72 @@
 			<h1 class="visually_hidden">Hotel Sedona</h1>
 				<img src="img/welcome.png" alt="welcome sedona" width="458" height="352">	
 		</section>
-		<section class="about_sedona">
+		<section class="main_section">
 			<div class="reasons_header">
 				<h2 class="reasons_slogan">Седона - небольшой городок в Аризоне,<br>
 				заслуживающий большего!</h2>
 					<p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
 			</div>
-		
-		
-			<ul class="feature_list"> 
+			
 				<div class="first_reason">
-				<li class="feature_item_white1">	
-				<div>			
-					<h3> Настоящий <br> городок </h3>
-					<p>
-						- №1 - <br>
-					</p>
-					<p>
-						Седона - не аттракцион для туристов, <br>
-						там течет своя жизнь
-					</p>
-				</div>	
-				</li>
-						
- 					<img class="feature_photo1" src="img/reason1.jpg" width="800" height="256"
-					alt = "First reason Sedona">
-		</div>
-		<div class="features">
-			<ul class="features_img">
-				<li>
-					<figure>
-						<img src="img/accommodation.png" width="75" height="72"
-				alt = "Accommodation">
-					</figure>
-					<div class="motel">
-					<h3> Жильё </h3>
-					<p>
-						Рекомендуем пожить в настоящем <br>
-						мотеле, всё как в кино!
-					</p>
+					<div class="first_reason_text">	
+						<h3>Настоящий<br>городок</h3>
+							<p>- №1 -<br></p>
+							<p>Седона - не аттракцион для туристов,<br>там течет своя жизнь</p>
 					</div>
-				</li>
-				<li>
-					<figure>
-						<img src="img/food.png" width="74" height="70"
-				alt = "Food">
-					</figure>
-					<h3> Еда </h3>
-					<p>
-						Всегда заказывайте фирменный бургер, <br>
-						вы не разочаруетесь!
-					</p>
-				</li>
-					<li>
-						<figure>
-						<img src="img/souvenir.png" width="64" height="76"
-				alt = "Souvenir">
-					</figure>
-					<h3> Сувениры </h3>
-					<p>
-						Не только китайского, но и местного <br>
-						производства!
-					</p>
-				</li>
-			</ul>
-		</div>	
-			<div class="second_reason">
-				<img class="feature_photo2" src="img/reason2.jpg" width="800" height="256"
-				alt = "Second reason Sedona">
-				<li class="feature_item_white2">
-					<div>			
-					<h3> Там есть <br>
-					мост дьявола </h3>
-					<p>
-						- №2 - 
-					</p>
-					<p>
-						Да, по нему можно пройти! Если конечно <br>
-						вы осмелитесь
-					</p>
-					</div>	
-				</li> 
-			</div>
-			<div class="reason_black">	
-				<li class="feature_item_black">
-					<div class="dark">
-					<h3> Небольшая <br>
-					площадь </h3>
-					<p>
-						- №3 - 
-					</p>
-					<p>
-						Все достопримечательности <br>
-						находятся очень близко
-					</p>
-					</div>
-				</li>
-				<li class="feature_item_black">
-					<div class="dark">
-					<h3> Красивая <br>
-					дорога </h3>
-					<p>
-						- №4 - 
-					</p>
-					<p>
-						Ехать в Седону из Лас-Вегаса совсем <br>
-						нескучно!
-					</p>
-					</div>
-				</li>
-				<li class="feature_item_black">
-					<div class="dark">
-					<h3> Мало <br>
-					туристов </h3>
-					<p>
-						- №5 - <br>
-					</p>
-					<p>
-						Большинство едет в Гранд Каньон <br>
-						и толпится там
-					</p>
-					</div>
-				</li>
+					<img src="img/reason1.jpg" width="800" height="256"
+					alt = "First reason Sedona">	
 				</div>
-			</ul>
+				<div class="reasons_without_number">
+					<div class="accommodation_reason">
+						<h3>Жильё</h3>
+							<p>Рекомендуем пожить в настоящем <br>
+							мотеле, всё как в кино!</p>
+					</div>
+					<div class="food_reason">
+						<h3>Еда</h3>
+							<p>Всегда заказывайте фирменный бургер, <br>
+							вы не разочаруетесь!</p>
+					</div>
+					<div class="souvenir_reason">
+						<h3> Сувениры </h3>
+							<p>Не только китайского, но и местного <br>
+							производства!</p>
+					</div>
+				</div>	
+				<div class="second_reason">
+					<img src="img/reason2.jpg" width="800" height="256"
+					alt = "Second reason Sedona">
+					<div class="second_reason_text">			
+						<h3>Там есть<br>мост дьявола </h3>
+							<p>- №2 -</p>
+							<p>Да, по нему можно пройти! Если конечно <br>вы осмелитесь</p>
+					</div>	
+				</div>
+				<div class="reasons_with_grey_bg">	
+					<div>
+						<h3>Небольшая<br>площадь</h3>
+							<p>- №3 -</p>
+							<p>Все достопримечательности<br>находятся очень близко</p>
+					</div>
+					<div>
+						<h3>Красивая<br>дорога</h3>
+						<p>- №4 -</p> 
+						<p>Ехать в Седону из Лас-Вегаса совсем<br>
+						нескучно!</p>
+					</div>
+					<div>
+						<h3>Мало<br>туристов</h3>
+							<p>- №5 -<br></p>
+							<p>Большинство едет в Гранд Каньон<br>
+							и толпится там</p>
+					</div>
+				</div>
 		<section class="text_all">
 			<div>
-			  	<h2> Заинтересовались? </h2>
+			  	<h2>Заинтересовались?</h2>
 				<p class="text">
-					Укажите предполагаемые даты поездки, <br>
+					Укажите предполагаемые даты поездки,<br>
 					и мы покажем вам лучшие предложения гостиниц в Седоне
 				</p>
 			</div>
