--- a/index.html
+++ b/index.html
@@ -26,79 +26,78 @@
 			<h1 class="visually_hidden">Hotel Sedona</h1>
 				<img src="img/welcome.png" alt="welcome sedona" width="458" height="352">	
 		</section>
-		<section class="main_section">
+		<section class="reasons">
 			<div class="reasons_header">
 				<h2 class="reasons_slogan">Седона - небольшой городок в Аризоне,<br>
 				заслуживающий большего!</h2>
 					<p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
 			</div>
-			
-				<div class="first_reason">
-					<div class="first_reason_text">	
-						<h3>Настоящий<br>городок</h3>
-							<p>- №1 -<br></p>
-							<p>Седона - не аттракцион для туристов,<br>там течет своя жизнь</p>
-					</div>
-					<img src="img/reason1.jpg" width="800" height="256"
-					alt = "First reason Sedona">	
+			<div class="first_reason">
+				<div class="first_reason_text">	
+					<h3>Настоящий<br>городок</h3>
+						<p>- №1 -<br></p>
+						<p>Седона - не аттракцион для туристов,<br>там течет своя жизнь</p>
 				</div>
-				<div class="reasons_without_number">
-					<div class="accommodation_reason">
-						<h3>Жильё</h3>
-							<p>Рекомендуем пожить в настоящем <br>
-							мотеле, всё как в кино!</p>
-					</div>
-					<div class="food_reason">
-						<h3>Еда</h3>
-							<p>Всегда заказывайте фирменный бургер, <br>
-							вы не разочаруетесь!</p>
-					</div>
-					<div class="souvenir_reason">
-						<h3> Сувениры </h3>
-							<p>Не только китайского, но и местного <br>
-							производства!</p>
-					</div>
+				<img src="img/reason1.jpg" width="800" height="256"
+				alt = "First reason Sedona">	
+			</div>
+			<div class="reasons_without_number">
+				<div class="accommodation_reason">
+					<h3>Жильё</h3>
+						<p>Рекомендуем пожить в настоящем <br>
+						мотеле, всё как в кино!</p>
+				</div>
+				<div class="food_reason">
+					<h3>Еда</h3>
+						<p>Всегда заказывайте фирменный бургер, <br>
+						вы не разочаруетесь!</p>
+				</div>
+				<div class="souvenir_reason">
+					<h3> Сувениры </h3>
+						<p>Не только китайского, но и местного <br>
+						производства!</p>
+				</div>
+			</div>	
+			<div class="second_reason">
+				<img src="img/reason2.jpg" width="800" height="256"
+				alt = "Second reason Sedona">
+				<div class="second_reason_text">			
+					<h3>Там есть<br>мост дьявола </h3>
+						<p>- №2 -</p>
+						<p>Да, по нему можно пройти! Если конечно <br>вы осмелитесь</p>
 				</div>	
-				<div class="second_reason">
-					<img src="img/reason2.jpg" width="800" height="256"
-					alt = "Second reason Sedona">
-					<div class="second_reason_text">			
-						<h3>Там есть<br>мост дьявола </h3>
-							<p>- №2 -</p>
-							<p>Да, по нему можно пройти! Если конечно <br>вы осмелитесь</p>
-					</div>	
+			</div>
+			<div class="reasons_with_grey_bg">	
+				<div>
+					<h3>Небольшая<br>площадь</h3>
+						<p>- №3 -</p>
+						<p>Все достопримечательности<br>находятся очень близко</p>
 				</div>
-				<div class="reasons_with_grey_bg">	
-					<div>
-						<h3>Небольшая<br>площадь</h3>
-							<p>- №3 -</p>
-							<p>Все достопримечательности<br>находятся очень близко</p>
-					</div>
-					<div>
-						<h3>Красивая<br>дорога</h3>
+				<div>
+					<h3>Красивая<br>дорога</h3>
 						<p>- №4 -</p> 
 						<p>Ехать в Седону из Лас-Вегаса совсем<br>
 						нескучно!</p>
-					</div>
-					<div>
-						<h3>Мало<br>туристов</h3>
-							<p>- №5 -<br></p>
-							<p>Большинство едет в Гранд Каньон<br>
-							и толпится там</p>
-					</div>
 				</div>
-		<section class="text_all">
-			<div>
-			  	<h2>Заинтересовались?</h2>
-				<p class="text">
-					Укажите предполагаемые даты поездки,<br>
-					и мы покажем вам лучшие предложения гостиниц в Седоне
-				</p>
+				<div>
+					<h3>Мало<br>туристов</h3>
+						<p>- №5 -<br></p>
+						<p>Большинство едет в Гранд Каньон<br>
+						и толпится там</p>
+				</div>
 			</div>
 		</section>
-	</section>
+		<section class="search">
+			<div class="search_header">
+			  	<h2>Заинтересовались?</h2>
+					<p>
+					Укажите предполагаемые даты поездки,<br>
+					и мы покажем вам лучшие предложения гостиниц в Седоне
+					</p>
+			</div>
+		
 
-		<div class="search">
+		<div>
 			<button class="search_form"> Поиск гостиницы в Седоне</button>
 		</div>
 		<section class="form_container">
@@ -155,6 +154,7 @@
 				
 			</form>
 			</div>
+		</section>
 		</section>
 		<div class="map_background">	
 			<section class="map">
