--- a/index.html
+++ b/index.html
@@ -159,14 +159,14 @@
 		</section>
 		<section class="social">
 			<h2 class="visually_hidden">Социальные сети</h2> 
-			<a href="#"Twitter><img class="twitter" src="img/twitter.png" width="17" height="15" alt = "Twitter"></a>
-			<a href="#"Facebook><img class="facebook" src="img/facebook.png" width="12" height="22" alt = "Facebook"></a>
-			<a href="#"Youtube><img class="youtube" src="img/youtube.png" width="20" height="16" alt = "Youtube"></a>
+			<a href="#">Twitter<img class="twitter" src="img/twitter.png" width="17" height="15" alt = "Twitter"></a>
+			<a href="#">Facebook<img class="facebook" src="img/facebook.png" width="12" height="22" alt = "Facebook"></a>
+			<a href="#">Youtube<img class="youtube" src="img/youtube.png" width="20" height="16" alt = "Youtube"></a>
 		</section>
 		<section class="academy">
 			<h2 class="visually_hidden">HTML Academy logo</h2> 
 			<span> website by </span>
-			<a href="#"HTML Academy><img src="img/academy.png" width="115" height="41" alt = "HTML Academy"></a>
+			<a href="#">HTML Academy<img src="img/academy.png" width="115" height="41" alt = "HTML Academy"></a>
 		</section>
 	</footer>
 	<script src="js/form.js"></script>		
