--- a/hotels.html
+++ b/hotels.html
@@ -11,15 +11,12 @@
 <body>
 	<header>
 		<nav class="nav">	
-			<ul class="nav_link">
-				<li ><a href="#">Информация</a></li>
+			<ul class="nav_list">
+				<li><a href="#">Информация</a></li>
 				<li><a href="#">Фото и видео</a></li>
-		    	<li class="img-logo">
-		    	<a href="index.html"><img src="img/logo.png" width="140" height="72" alt = "Logo Sedona"> 
-		    	</a>
-		    	</li>
+		    	<li class="img_logo"><a href="index.html"><img src="img/logo.png" width="140" height="72" alt = "Logo Sedona"> </a>
 				<li><a href="#">Карта штата</a></li>
-				<li><a href="#">Гостиницы</a></li>
+				<li><a href="hotels.html">Гостиницы</a></li>
 			</ul>
 		</nav>
 	</header>
@@ -28,26 +25,20 @@
 	</main>
 	<footer>
 		<section class="contacts">
+			<h2 class="visually_hidden">Контакты</h2> 
 			<a href="#">#VISITSEDONA</a>
 	    	<span>ТЕЛ: +7 (495) 666-02-66</span>
 		</section>
 		<section class="social">
-			<a  href="#"Twitter>
-			    <img class="twitter" src="img/twitter.png" width="17" height="15"
-				alt = "Twitter"> </a>
-			<a  href="#"Facebook>
-				<img class="facebook" src="img/facebook.png" width="12" height="22"
-				alt = "Facebook"> </a>
-			<a  href="#"Youtube>
-				<img class="youtube" src="img/youtube.png" width="20" height="16"
-				alt = "Youtube"> </a>
+			<h2 class="visually_hidden">Социальные сети</h2> 
+			<a href="#"><img class="twitter" src="img/twitter.png" width="17" height="15" alt = "Twitter"></a>
+			<a href="#"><img class="facebook" src="img/facebook.png" width="12" height="22" alt = "Facebook"></a>
+			<a href="#"><img class="youtube" src="img/youtube.png" width="20" height="16" alt = "Youtube"></a>
 		</section>
 		<section class="academy">
+			<h2 class="visually_hidden">HTML Academy logo</h2> 
 			<span> website by </span>
-			<a href="#"HTML Academy> 
-				<img src="img/academy.png" width="115" height="41"
-				alt = "HTML Academy">
-			</a>
+			<a href="#"><img src="img/academy.png" width="115" height="41" alt = "HTML Academy"></a>
 		</section>
 	</footer>
 </body>
