form elements fix

--- a/index.html
+++ b/index.html
@@ -101,43 +101,31 @@
 							<label for="arrival">Дата заезда:</label>
 							<div class="arrival_input">
 								<input id="arrival" type="text" name="arrival_date" placeholder="24 апреля 2017">
-								<button class="calendar" type="button">
-								<img src="img/calendar.png" width="21" height="22" alt="календарь">
-								</button>
+								<button class="calendar" type="button"></button>
 							</div>
 						</div>
 						<div class="departure_row">
 							<label for="departure">Дата выезда:</label>
 							<div class="departure_input">
 								<input id="departure" type="text" name="departure_date" placeholder="25 апреля 2017">
-								<button class="calendar" type="button">
-								<img src="img/calendar.png" width="21" height="22" alt="календарь">
-								</button>
+								<button class="calendar" type="button"></button>
 							</div>
 						</div>
 						<div class="guests_row">
 							<div class="adults">
 								<label for="adults">Взрослые:</label>
 								<div class="adults_input">
-									<button class="adults_minus" type="button">
-									<img src="img/minus.png" width="12" height="3" alt="меньше">
-									</button>
+									<button class="adults_minus" type="button"></button>
 									<input id="adults" type="number" name="adults" value="2">
-									<button class="adults_plus" type="button">
-									<img src="img/plus.png" width="11" height="11" alt="больше">
-									</button>
+									<button class="adults_plus" type="button"></button>
 								</div>
 							</div>
 							<div class="children">
 								<label for="children">Дети:</label>
 								<div class="children_input">
-									<button class="children_minus" type="button">
-									<img src="img/minus.png" width="12" height="3" alt="меньше">
-									</button>
+									<button class="children_minus" type="button"></button>
 									<input id="children" type="number" name="children" value="0">
-									<button class="children_plus" type="button">
-									<img src="img/plus.png" width="11" height="11" alt="больше">
-									</button>
+									<button class="children_plus" type="button"></button>
 								</div>
 							</div>
 						</div>
