--- a/hotels.html
+++ b/hotels.html
@@ -21,7 +21,97 @@
 		</nav>
 	</header>
 	<main>
-		
+		<section class="hotel_selection">
+			<h1 class="visually_hidden">Форма для поиска гостиницы</h1>
+			<form class="hotel_selection_form" action="https://echo.htmlacademy.ru" method ="post">
+				<fieldset class="infrastructure">
+					<legend>Инфраструктура:</legend>
+						<ul>
+							<li><input id="filter_pool" type="checkbox" name="pool" checked>
+							<label for="filter_pool">Бассейн</label></li>
+							<li><input id="filter_parking" type="checkbox" name="parking">
+							<label for="filter_parking">Парковка</label></li>
+							<li><input id="filter_wifi" type="checkbox" name="wifi">
+							<label for="filter_wifi">Wi-Fi</label></li>
+						</ul>
+				</fieldset>
+				<fieldset class="accommodation">
+					<legend>Тип жилья:</legend>
+						<ul>
+							<li><input id="filter_hotel" type="checkbox" name="pool" checked>
+							<label for="filter_hotel">Гостиница</label></li>
+							<li><input id="filter_motel" type="checkbox" name="parking" checked>
+							<label for="filter_motel">Мотель</label></li>
+							<li><input id="filter_apartments" type="checkbox" name="wifi" checked>
+							<label for="filter_apartments">Апартаменты</label></li>
+						</ul>
+				</fieldset>
+				<fieldset class="price">
+					<legend>Стоимость в сутки (р):</legend>
+						<div class="price_range">
+							<label for="min_p">От</label>
+							<input id="min_p" type="number" name="min_price" value="0">
+							<label for="max_p">До</label>
+							<input id="max_p" type="number" name="max_price" value="3000">
+						</div>
+						<input type="range" min="0" max="4000" value="3000" name="range">
+					<button class="show_hotels" type="submit">Показать</button>
+				</fieldset>
+			</form>
+		</section>
+		<section class="searching_result">
+			<h2 class="visually_hidden">Результат поиска и сортировка</h2>
+			<div>
+				<h3>Найдено:</h3>
+			</div>
+			<div class="sorting">
+				<h3>Сортировка</h3>
+				<button>По цене</button>
+				<button>По типу</button>
+				<button>По рейтингу</button>
+			</div>
+		</section>
+		<section class="found_hotels">
+			<h2 class="visually_hidden">Результаты поиска</h2>
+			<div class="first_hotel">
+				<img src="img/amara.jpg" alt="Amara Resort & Spa" width="135" height="90">
+				<div class="hotel_discription">
+					<h3>Amara Resort & Spa</h3>
+					<p>Гостиница</p>
+					<p>От 4000 р.</p>
+					<button>Подробнее</button>
+					<button>Забронировать</button>
+				</div>
+				<div class="rating">
+					<p>Рейтинг: 8,5</p>
+				</div>
+			</div>
+			<div class="second_hotel">
+				<img src="img/desert.jpg" alt="Desert Quail Inn" width="135" height="90">
+				<div class="hotel_discription">
+					<h3>Desert Quail Inn</h3>
+					<p>Мотель</p>
+					<p>От 3000 р.</p>
+					<button>Подробнее</button>
+					<button>Забронировать</button>
+				</div>
+				<div class="rating">
+					<p>Рейтинг: 8,9</p>
+				</div>
+			</div>
+			<div class="third_hotel">
+				<img src="img/diablo.jpg" alt="Villas at Poco Diablo" width="135" height="90">
+				<div class="hotel_discription">
+					<h3>Villas at Poco Diablo</h3>
+					<p>Апартаменты</p>
+					<p>От 2000 р.</p>
+					<button>Подробнее</button>
+					<button>Забронировать</button>
+				</div>
+				<div class="rating">
+					<p>Рейтинг: 9,2</p>
+				</div>
+		</section>
 	</main>
 	<footer>
 		<section class="contacts">
