--- a/hotels.html
+++ b/hotels.html
@@ -73,8 +73,10 @@
 		</section>
 		<section class="found_hotels">
 			<h2 class="visually_hidden">Результаты поиска</h2>
-			<div class="first_hotel">
-				<img src="img/amara.jpg" alt="Amara Resort & Spa" width="135" height="90">
+			<section class="first_hotel">
+				<div class="hotel_image">
+					<img src="img/amara.jpg" alt="Amara Resort & Spa" width="135" height="90">
+				</div>
 				<div class="hotel_discription">
 					<h3>Amara Resort & Spa</h3>
 					<p>Гостиница</p>
@@ -85,9 +87,11 @@
 				<div class="rating">
 					<p>Рейтинг: 8,5</p>
 				</div>
-			</div>
+			</section>
 			<div class="second_hotel">
-				<img src="img/desert.jpg" alt="Desert Quail Inn" width="135" height="90">
+				<div class="hotel_image">
+					<img src="img/desert.jpg" alt="Desert Quail Inn" width="135" height="90">
+				</div>
 				<div class="hotel_discription">
 					<h3>Desert Quail Inn</h3>
 					<p>Мотель</p>
@@ -100,7 +104,9 @@
 				</div>
 			</div>
 			<div class="third_hotel">
-				<img src="img/diablo.jpg" alt="Villas at Poco Diablo" width="135" height="90">
+				<div class="hotel_image">
+					<img src="img/diablo.jpg" alt="Villas at Poco Diablo" width="135" height="90">
+				</div>	
 				<div class="hotel_discription">
 					<h3>Villas at Poco Diablo</h3>
 					<p>Апартаменты</p>
