--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 				<li><a href="#">Фото и видео</a></li>
 		    	<li class="img_logo"> <img src="img/logo.png" width="140" height="72" alt = "Logo Sedona"></li>
 				<li><a href="#">Карта штата</a></li>
-				<li><a href="hotels.html">Гостиницы</a></li>
+				<!-- <li><a href="hotels.html">Гостиницы</a></li> -->
+				<li><a href="#">Гостиницы</a></li>
 			</ul>
 		</nav>
 	</header>
